21_Final_DevOps_Project/kubernetes/01-config.yaml
apiVersion: v1
kind: Namespace
metadata: {name: taskboard}
